--- a/gympicker.fsproj
+++ b/gympicker.fsproj
@@ -1,20 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <Title>GymPicker</Title>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Authors>LeoRiether</Authors>
+    <Company>LeoRiether Inc.</Company>
+    <RepositoryUrl>https://github.com/LeoRiether/GymPicker</RepositoryUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="DB.fs" />
     <Compile Include="Gym.fs" />
     <Compile Include="Validate.fs" />
     <Compile Include="Lib.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
   </ItemGroup>
-
+  <ItemGroup>
+    <None Include="LICENSE" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
 </Project>
