--- a/gympicker.fsproj
+++ b/gympicker.fsproj
@@ -10,14 +10,15 @@
     <Version>1.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DB.fs" />
     <Compile Include="Gym.fs" />
+    <Compile Include="DB.fs" />
     <Compile Include="Validate.fs" />
     <Compile Include="Lib.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" Pack="true" Visible="false" PackagePath="" />
